--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -25,16 +25,22 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
-      - name: Upload artifacts
+      - name: Upload artifacts #saving the build file(artifact)
         uses: actions/upload-artifact@v3
         with:
           name: dist-files
-          path:
-            dist
-            package.json
+          path: dist
+          #   dist
+          #   package.json
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Get build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-files
+      - name: Output contents
+        run: ls
       - name: Deploy
         run: echo "Deploying..."
